--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "symfony/translation-contracts": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
-        "api-platform/core": "^3.0",
+        "api-platform/core": "^3.0|^4.0",
         "rector/rector": "^1.2",
         "symfony/browser-kit": "^6.4|^7.0",
         "symfony/console": "^6.4|^7.0",
